--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "from datetime import datetime  # calculating time until expiration\n",
@@ -14,14 +14,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "\n",
@@ -109,6 +108,7 @@
     "        dividend_list = self.tickerObj.dividends.to_list()\n",
     "        if len(dividend_list) != 0:\n",
     "            return dividend_list[-1]\n",
+    "        return 0\n",
     "\n",
     "    def risk_free_rate(self): # calculate risk-free rate of return\n",
     "        rates = pd.read_csv('rates.csv')\n",
@@ -153,10 +153,6 @@
     "        return benchmark_rate\n",
     "\n",
     "    def pricing(self,time: float,price: float): # pricing of a singular futures contract on underlying equity\n",
-    "        if self.div_rate() is None:\n",
-    "            div_rate = 0\n",
-    "        else:\n",
-    "            div_rate = self.div_rate()\n",
     "\n",
     "        return 100 * price * np.e**(self.risk_free_rate() - (div_rate*time))\n",
     "\n",
@@ -198,7 +194,51 @@
     "    def _str_(self):\n",
     "        return f\"risk-free-rate{self.risk_free_rate()}, benchmark rate {self.benchmark_rate()}, pricing {self.pricing(1/52,self.spot_price)}, beta {self.beta()}, expect_return {self.expected_return()}, number of future contracts (100 share per contract) {self.n()}, protfolio {self.portfolio()}, basis risk {self.basis_risk()}, metrics {self.metrics()}\"\n",
     "        pass\n",
+    "\n",
+    "\n",
     "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Edward_Dashboard' object has no attribute 'initial_time'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [17]\u001B[0m, in \u001B[0;36m<cell line: 9>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# User Inputs\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# ticker = input(\"Ticker Symbol you would like to use? \")\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# # ticker_symbol = yf.Ticker(input_symbol)\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;66;03m# tf = input(\"What date would you like to set the expiration? (Y-M-D)\")\u001B[39;00m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# EDWARD_dashboard( ticker, tf, tol, cap, shares)\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m tesla \u001B[38;5;241m=\u001B[39m \u001B[43mEdward_Dashboard\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mTSLA\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m2023-1-13\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.05\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m60000\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;66;03m# print(tesla.get_historical_data()) # table\u001B[39;00m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;66;03m# print(tesla.div_rate())\u001B[39;00m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;66;03m# print(tesla.risk_free_rate())\u001B[39;00m\n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# print(tesla.benchmark_rate())\u001B[39;00m\n\u001B[0;32m     14\u001B[0m \u001B[38;5;66;03m# print(tesla.pricing())\u001B[39;00m\n\u001B[0;32m     15\u001B[0m \u001B[38;5;66;03m# print(tesla.beta())\u001B[39;00m\n\u001B[0;32m     16\u001B[0m \u001B[38;5;28mprint\u001B[39m(tesla\u001B[38;5;241m.\u001B[39minitial_time)\n",
+      "Input \u001B[1;32mIn [16]\u001B[0m, in \u001B[0;36mEdward_Dashboard.__init__\u001B[1;34m(self, ticker, final_time, r_tol, liquid, cap, shares)\u001B[0m\n\u001B[0;32m     53\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mspot_price \u001B[38;5;241m=\u001B[39m s\n\u001B[0;32m     55\u001B[0m \u001B[38;5;66;03m# intial time(not user inputted )\u001B[39;00m\n\u001B[1;32m---> 56\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtime \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time\u001B[38;5;241m.\u001B[39myear\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time\u001B[38;5;241m.\u001B[39mmonth\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time\u001B[38;5;241m.\u001B[39mday\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m     57\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time \u001B[38;5;241m=\u001B[39m datetime\u001B[38;5;241m.\u001B[39mnow()\n\u001B[0;32m     58\u001B[0m \u001B[38;5;66;03m# final time(user inputted)\u001B[39;00m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'Edward_Dashboard' object has no attribute 'initial_time'"
+     ]
+    }
+   ],
+   "source": [
+    "# User Inputs\n",
+    "# ticker = input(\"Ticker Symbol you would like to use? \")\n",
+    "# # ticker_symbol = yf.Ticker(input_symbol)\n",
+    "# cap = input(\"How much Capital would you like to invest \")\n",
+    "# tol = input(\"Ammount of money you are willing to lose (porportion) \")\n",
+    "# shares = input(\"How many shares do you want to buy\")\n",
+    "# tf = input(\"What date would you like to set the expiration? (Y-M-D)\")\n",
+    "# EDWARD_dashboard( ticker, tf, tol, cap, shares)\n",
+    "tesla = Edward_Dashboard('TSLA', '2023-1-13', 0.05, 60000)\n",
+    "# print(tesla.get_historical_data()) # table\n",
+    "# print(tesla.div_rate())\n",
+    "# print(tesla.risk_free_rate())\n",
+    "# print(tesla.benchmark_rate())\n",
+    "# print(tesla.pricing())\n",
+    "# print(tesla.beta())\n",
+    "print(tesla.initial_time)"
    ],
    "metadata": {
     "collapsed": false,
@@ -211,21 +251,23 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "# User Inputs\n",
-    "ticker = input(\"Ticker Symbol you would like to use? \")\n",
-    "# ticker_symbol = yf.Ticker(input_symbol)\n",
-    "cap = input(\"How much Capital would you like to invest \")\n",
-    "tol = input(\"Ammount of money you are willingto lose porportion \")\n",
-    "shares = input(\"How many shares do you want to buy\")\n",
-    "tf = input(\"What date would you like to set the expiration? (Y-M-D)\")\n",
-    "EDWARD_dashboard( ticker, tf, tol, cap, shares)\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
