everything below risk free rate is broken, the added variables conofuse me Jason Ang

--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "outputs": [],
    "source": [
-    "from datetime import datetime  # calculating time until expiration\n",
+    "from datetime import datetime, timedelta  # calculating time until expiration\n",
     "import numpy as np  # performing numerical methods\n",
     "import pandas as pd  # printing dataframes\n",
     "import yfinance as yf # retrieving financial data\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "\n",
@@ -96,6 +96,7 @@
     "        self.shares = float(shares * self.spot_price)\n",
     "        #total capital\n",
     "        self.cap = float(cap)\n",
+    "\n",
     "    def get_historical_data(self):\n",
     "        temp_csv_str = f\"{self.ticker_symbol}.csv\"\n",
     "        temp_csv = self.tickerObj.history(period =\"max\").to_csv(temp_csv_str)\n",
@@ -145,10 +146,9 @@
     "    def benchmark_rate(self): # calculate performance of a benchmark\n",
     "        # set the S&P as the default benchmark\n",
     "        gspc = yf.Ticker('^GSPC').info\n",
-    "        print(gspc)\n",
-    "        print(self.initial_time - (self.year_time * 365))\n",
-    "        hist_table = yf.download(gspc, self.initial_time-(self.year_time*365))['Adj Close']\n",
-    "        hist_s = hist_table.loc[self.initial_time-(self.year_time*365)][gspc]\n",
+    "        time = datetime.today() - timedelta(days=(self.year_time*365))\n",
+    "        hist_table = yf.download(gspc, datetime.today() - timedelta(days=(self.year_time*365)))['Adj Close']\n",
+    "        hist_s = hist_table.loc[datetime.today() - timedelta(days=( self.year_time*365))][gspc]\n",
     "        benchmark_rate = abs(gspc['regularMarketPrice']- hist_s)/hist_s\n",
     "        return benchmark_rate\n",
     "\n",
@@ -191,7 +191,7 @@
     "        \"\"\"\n",
     "        pass;\n",
     "\n",
-    "    def _str_(self):\n",
+    "    def __str__(self):\n",
     "        return f\"risk-free-rate{self.risk_free_rate()}, benchmark rate {self.benchmark_rate()}, pricing {self.pricing(1/52,self.spot_price)}, beta {self.beta()}, expect_return {self.expected_return()}, number of future contracts (100 share per contract) {self.n()}, protfolio {self.portfolio()}, basis risk {self.basis_risk()}, metrics {self.metrics()}\"\n",
     "        pass\n",
     "\n",
@@ -207,18 +207,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Edward_Dashboard' object has no attribute 'initial_time'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-13 00:00:00\n",
+      "0.13424657534246576\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'datetime.datetime' object is not subscriptable",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [17]\u001B[0m, in \u001B[0;36m<cell line: 9>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# User Inputs\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# ticker = input(\"Ticker Symbol you would like to use? \")\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# # ticker_symbol = yf.Ticker(input_symbol)\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;66;03m# tf = input(\"What date would you like to set the expiration? (Y-M-D)\")\u001B[39;00m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# EDWARD_dashboard( ticker, tf, tol, cap, shares)\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m tesla \u001B[38;5;241m=\u001B[39m \u001B[43mEdward_Dashboard\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mTSLA\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m2023-1-13\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.05\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m60000\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;66;03m# print(tesla.get_historical_data()) # table\u001B[39;00m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;66;03m# print(tesla.div_rate())\u001B[39;00m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;66;03m# print(tesla.risk_free_rate())\u001B[39;00m\n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# print(tesla.benchmark_rate())\u001B[39;00m\n\u001B[0;32m     14\u001B[0m \u001B[38;5;66;03m# print(tesla.pricing())\u001B[39;00m\n\u001B[0;32m     15\u001B[0m \u001B[38;5;66;03m# print(tesla.beta())\u001B[39;00m\n\u001B[0;32m     16\u001B[0m \u001B[38;5;28mprint\u001B[39m(tesla\u001B[38;5;241m.\u001B[39minitial_time)\n",
-      "Input \u001B[1;32mIn [16]\u001B[0m, in \u001B[0;36mEdward_Dashboard.__init__\u001B[1;34m(self, ticker, final_time, r_tol, liquid, cap, shares)\u001B[0m\n\u001B[0;32m     53\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mspot_price \u001B[38;5;241m=\u001B[39m s\n\u001B[0;32m     55\u001B[0m \u001B[38;5;66;03m# intial time(not user inputted )\u001B[39;00m\n\u001B[1;32m---> 56\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtime \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time\u001B[38;5;241m.\u001B[39myear\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time\u001B[38;5;241m.\u001B[39mmonth\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time\u001B[38;5;241m.\u001B[39mday\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m     57\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39minitial_time \u001B[38;5;241m=\u001B[39m datetime\u001B[38;5;241m.\u001B[39mnow()\n\u001B[0;32m     58\u001B[0m \u001B[38;5;66;03m# final time(user inputted)\u001B[39;00m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'Edward_Dashboard' object has no attribute 'initial_time'"
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [39]\u001B[0m, in \u001B[0;36m<cell line: 13>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      9\u001B[0m tesla \u001B[38;5;241m=\u001B[39m Edward_Dashboard(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTSLA\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2023-1-13\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;241m0.05\u001B[39m, \u001B[38;5;241m60000\u001B[39m)\n\u001B[0;32m     10\u001B[0m \u001B[38;5;66;03m# print(tesla.get_historical_data()) # table\u001B[39;00m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;66;03m# print(tesla.div_rate())\u001B[39;00m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;66;03m# print(tesla.risk_free_rate())\u001B[39;00m\n\u001B[1;32m---> 13\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mtesla\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbenchmark_rate\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n",
+      "Input \u001B[1;32mIn [38]\u001B[0m, in \u001B[0;36mEdward_Dashboard.benchmark_rate\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    121\u001B[0m gspc \u001B[38;5;241m=\u001B[39m yf\u001B[38;5;241m.\u001B[39mTicker(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m^GSPC\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39minfo\n\u001B[0;32m    122\u001B[0m time \u001B[38;5;241m=\u001B[39m datetime\u001B[38;5;241m.\u001B[39mtoday() \u001B[38;5;241m-\u001B[39m timedelta(days\u001B[38;5;241m=\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39myear_time\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m365\u001B[39m))\n\u001B[1;32m--> 123\u001B[0m \u001B[38;5;28minput\u001B[39m \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime[\u001B[38;5;241m1\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime[\u001B[38;5;241m2\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    124\u001B[0m hist_table \u001B[38;5;241m=\u001B[39m yf\u001B[38;5;241m.\u001B[39mdownload(gspc, \u001B[38;5;28minput\u001B[39m)[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAdj Close\u001B[39m\u001B[38;5;124m'\u001B[39m]\n\u001B[0;32m    125\u001B[0m hist_s \u001B[38;5;241m=\u001B[39m hist_table\u001B[38;5;241m.\u001B[39mloc[\u001B[38;5;28minput\u001B[39m][gspc]\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'datetime.datetime' object is not subscriptable"
      ]
     }
    ],
@@ -235,10 +243,9 @@
     "# print(tesla.get_historical_data()) # table\n",
     "# print(tesla.div_rate())\n",
     "# print(tesla.risk_free_rate())\n",
-    "# print(tesla.benchmark_rate())\n",
+    "print(tesla.benchmark_rate())\n",
     "# print(tesla.pricing())\n",
-    "# print(tesla.beta())\n",
-    "print(tesla.initial_time)"
+    "# print(tesla.beta())\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -249,9 +256,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 43,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "datetime.datetime(2022, 11, 5, 20, 15, 5, 296822)"
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.today() - timedelta(days=(20))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "datetime.datetime(2022, 11, 25, 20, 14, 58, 125810)"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.today()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
