everything below risk free rate is broken, the added variables conofuse me Jason Ang

--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "from datetime import datetime, timedelta  # calculating time until expiration\n",
+    "\n",
+    "from datetime import datetime  # calculating time until expiration\n",
     "import numpy as np  # performing numerical methods\n",
     "import pandas as pd  # printing dataframes\n",
-    "import yfinance as yf # retrieving financial data\n",
-    "from yahoo_finance import Share # used to get historical data of stock\n"
+    "import yfinance as yf # retrieving financial data"
    ],
    "metadata": {
     "collapsed": false,
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\n",
@@ -56,10 +56,10 @@
     "shares: float\n",
     "    user position in underlying stock, in united states dollars $, default = 100 * s\n",
     "year_time: date\n",
-    "    proportion of diff in time\n",
+    "    proportion of diff in time \n",
     "liquid: float\n",
     "    Liquid/capital money (user inputted)\n",
-    "\n",
+    "    \n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -77,7 +77,7 @@
     "        s = float(self.ticker['regularMarketPrice'])\n",
     "        assert s >= 0.00,  'stock price cannot be less than $0.00, cannot use this stock'\n",
     "        self.spot_price = s\n",
-    "\n",
+    "    \n",
     "        # intial time(not user inputted )\n",
     "        current_date = datetime.now()\n",
     "        time = f\"{current_date.year}-{current_date.month}-{current_date.day}\"\n",
@@ -96,7 +96,6 @@
     "        self.shares = float(shares * self.spot_price)\n",
     "        #total capital\n",
     "        self.cap = float(cap)\n",
-    "\n",
     "    def get_historical_data(self):\n",
     "        temp_csv_str = f\"{self.ticker_symbol}.csv\"\n",
     "        temp_csv = self.tickerObj.history(period =\"max\").to_csv(temp_csv_str)\n",
@@ -109,8 +108,7 @@
     "        dividend_list = self.tickerObj.dividends.to_list()\n",
     "        if len(dividend_list) != 0:\n",
     "            return dividend_list[-1]\n",
-    "        return 0\n",
-    "\n",
+    "        \n",
     "    def risk_free_rate(self): # calculate risk-free rate of return\n",
     "        rates = pd.read_csv('rates.csv')\n",
     "\n",
@@ -146,14 +144,19 @@
     "    def benchmark_rate(self): # calculate performance of a benchmark\n",
     "        # set the S&P as the default benchmark\n",
     "        gspc = yf.Ticker('^GSPC').info\n",
-    "        time = datetime.today() - timedelta(days=(self.year_time*365))\n",
-    "        hist_table = yf.download(gspc, datetime.today() - timedelta(days=(self.year_time*365)))['Adj Close']\n",
-    "        hist_s = hist_table.loc[datetime.today() - timedelta(days=( self.year_time*365))][gspc]\n",
+    "        print(gspc)\n",
+    "        print(self.initial_time - (self.year_time * 365))\n",
+    "        hist_table = yf.download(gspc, self.initial_time-(self.year_time*365))['Adj Close']\n",
+    "        hist_s = hist_table.loc[self.initial_time-(self.year_time*365)][gspc]\n",
     "        benchmark_rate = abs(gspc['regularMarketPrice']- hist_s)/hist_s\n",
     "        return benchmark_rate\n",
     "\n",
     "    def pricing(self,time: float,price: float): # pricing of a singular futures contract on underlying equity\n",
-    "\n",
+    "        if self.div_rate() is None:\n",
+    "            div_rate = 0\n",
+    "        else:\n",
+    "            div_rate = self.div_rate()\n",
+    "            \n",
     "        return 100 * price * np.e**(self.risk_free_rate() - (div_rate*time))\n",
     "\n",
     "    def beta(self): # covariance function\n",
@@ -164,7 +167,7 @@
     "        for i in range(len(hist_price)):\n",
     "            future_price.append(self.pricing(time = 1/52, price = hist_price[i]))\n",
     "        return np.cov(hist_price,future_price)[0,1]\n",
-    "\n",
+    "            \n",
     "\n",
     "\n",
     "    def expected_return(self): # calculate the expected return (w/ respect to a benchmark)\n",
@@ -191,107 +194,10 @@
     "        \"\"\"\n",
     "        pass;\n",
     "\n",
-    "    def __str__(self):\n",
+    "    def _str_(self):\n",
     "        return f\"risk-free-rate{self.risk_free_rate()}, benchmark rate {self.benchmark_rate()}, pricing {self.pricing(1/52,self.spot_price)}, beta {self.beta()}, expect_return {self.expected_return()}, number of future contracts (100 share per contract) {self.n()}, protfolio {self.portfolio()}, basis risk {self.basis_risk()}, metrics {self.metrics()}\"\n",
     "        pass\n",
-    "\n",
-    "\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-01-13 00:00:00\n",
-      "0.13424657534246576\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'datetime.datetime' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [39]\u001B[0m, in \u001B[0;36m<cell line: 13>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      9\u001B[0m tesla \u001B[38;5;241m=\u001B[39m Edward_Dashboard(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTSLA\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2023-1-13\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;241m0.05\u001B[39m, \u001B[38;5;241m60000\u001B[39m)\n\u001B[0;32m     10\u001B[0m \u001B[38;5;66;03m# print(tesla.get_historical_data()) # table\u001B[39;00m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;66;03m# print(tesla.div_rate())\u001B[39;00m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;66;03m# print(tesla.risk_free_rate())\u001B[39;00m\n\u001B[1;32m---> 13\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mtesla\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbenchmark_rate\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n",
-      "Input \u001B[1;32mIn [38]\u001B[0m, in \u001B[0;36mEdward_Dashboard.benchmark_rate\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    121\u001B[0m gspc \u001B[38;5;241m=\u001B[39m yf\u001B[38;5;241m.\u001B[39mTicker(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m^GSPC\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39minfo\n\u001B[0;32m    122\u001B[0m time \u001B[38;5;241m=\u001B[39m datetime\u001B[38;5;241m.\u001B[39mtoday() \u001B[38;5;241m-\u001B[39m timedelta(days\u001B[38;5;241m=\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39myear_time\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m365\u001B[39m))\n\u001B[1;32m--> 123\u001B[0m \u001B[38;5;28minput\u001B[39m \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime[\u001B[38;5;241m1\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime[\u001B[38;5;241m2\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    124\u001B[0m hist_table \u001B[38;5;241m=\u001B[39m yf\u001B[38;5;241m.\u001B[39mdownload(gspc, \u001B[38;5;28minput\u001B[39m)[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAdj Close\u001B[39m\u001B[38;5;124m'\u001B[39m]\n\u001B[0;32m    125\u001B[0m hist_s \u001B[38;5;241m=\u001B[39m hist_table\u001B[38;5;241m.\u001B[39mloc[\u001B[38;5;28minput\u001B[39m][gspc]\n",
-      "\u001B[1;31mTypeError\u001B[0m: 'datetime.datetime' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "# User Inputs\n",
-    "# ticker = input(\"Ticker Symbol you would like to use? \")\n",
-    "# # ticker_symbol = yf.Ticker(input_symbol)\n",
-    "# cap = input(\"How much Capital would you like to invest \")\n",
-    "# tol = input(\"Ammount of money you are willing to lose (porportion) \")\n",
-    "# shares = input(\"How many shares do you want to buy\")\n",
-    "# tf = input(\"What date would you like to set the expiration? (Y-M-D)\")\n",
-    "# EDWARD_dashboard( ticker, tf, tol, cap, shares)\n",
-    "tesla = Edward_Dashboard('TSLA', '2023-1-13', 0.05, 60000)\n",
-    "# print(tesla.get_historical_data()) # table\n",
-    "# print(tesla.div_rate())\n",
-    "# print(tesla.risk_free_rate())\n",
-    "print(tesla.benchmark_rate())\n",
-    "# print(tesla.pricing())\n",
-    "# print(tesla.beta())\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "datetime.datetime(2022, 11, 5, 20, 15, 5, 296822)"
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datetime.today() - timedelta(days=(20))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "datetime.datetime(2022, 11, 25, 20, 14, 58, 125810)"
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datetime.today()"
    ],
    "metadata": {
     "collapsed": false,
@@ -304,34 +210,451 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "#practicing with microsoft stock \n",
+    " #stock1 = Edward_Dashboard(\"MSFT\", s: float,  tf: str, tol: float = 0.00, cap: float = 10000, shares: float = 100)\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft= Edward_Dashboard(\"msft\",\"2022-11-27\",300)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.ticker_symbol"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.spot_price"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.cap"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.initial_time"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.final_time"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.year_time"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.risk_tolerance"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.liquid"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.tickerObj"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.div_rate()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.risk_free_rate()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.get_historical_data()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.beta()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.pricing(1/52, .0608085505664348 )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(beta_array[0,0],beta_array[0,1],beta_array[1,0],\n",
+    "beta_array[1,1])\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "help(msft)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "msft.n()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.spot_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.cap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.initial_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.final_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.year_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.risk_tolerance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.liquid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.tickerObj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.div_rate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.risk_free_rate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.get_historical_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.beta()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.pricing(1/52, .0608085505664348 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(beta_array[0,0],beta_array[0,1],beta_array[1,0],\n",
+    "beta_array[1,1])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(msft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msft.n()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
